fix(ld-sidenav): truncate long words in nav items
Fixes #942

--- a/src/liquid/components/ld-sidenav/ld-sidenav-navitem/ld-sidenav-navitem.shadow.css
+++ b/src/liquid/components/ld-sidenav/ld-sidenav-navitem/ld-sidenav-navitem.shadow.css
@@ -430,12 +430,12 @@ That's why we set z-index 0 on the following elements.
   display: -webkit-box;
   text-overflow: ellipsis;
   overflow: hidden;
+  word-break: break-word;
 }
 
 .ld-sidenav-navitem--subline .ld-sidenav-navitem__mainline,
 .ld-sidenav-navitem__subline {
   -webkit-line-clamp: 1;
-  word-break: break-all;
 }
 
 .ld-sidenav-navitem__subline {
